fixed the footer on all the pages and button spacing on ipad (graduate section

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -399,6 +399,7 @@ a:hover{
   /* Graduate section */
   .GraduateButton{
     width: 30vw;
+    margin-bottom: 5vh;
   }
   .Image{
     margin-bottom: 2vh;
